add bootstrap to index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <title>Hello World!</title>
 
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
   </head>
   <body>
     <h1>💖 Hello World!</h1>
     <p>Welcome to your Electron application.</p>
     <script type="module" src="/src/renderer.js"></script>
+
+     <!-- Add the Bootstrap JavaScript file -->
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
