--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,5 +14,10 @@
 
      <!-- Add the Bootstrap JavaScript file -->
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- connect file sector page -->
+    <a href="./src/fileselector.html"> file selector</a>
+    
+
   </body>
 </html>
