user name commit

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,9 @@
 
     <!-- connect file sector page -->
     <a href="./src/fileselector.html"> file selector</a>
+    <br>
+    <a href=".\src\demofileselector.html"> file 2 selector</a>
+   
     
 
   </body>
