--- a/frontend/src/fileselector.html
+++ b/frontend/src/fileselector.html
@@ -8,15 +8,29 @@
         body {
             background-color: #19222A;
             color: #FFFFFF;
-            font-family: Arial, sans-serif;
+            font-family: 'Sen', sans-serif;
             margin: 0;
             padding: 0;
             position: relative;
         }
+        h1 {
+            position: absolute;
+            top: 100px; /* Adjust top position */
+            left: 20px; /* Adjust left position */
+            color: #FFFFFF;
+            font-weight: bold;
+        }
+        h2 {
+            position: absolute;
+            top:180px; /* Adjust top position */
+            left: 20px; /* Adjust left position */
+            color: #FFFFFF;
+            font-weight: bold;
+        }
         .logo {
             background-color: #F8C40D;
-            width: 100px; /* Adjust width of logo */
-            height: 100px; /* Adjust height of logo */
+            width: 60px; /* Adjust width of logo */
+            height: 60px; /* Adjust height of logo */
             border-radius: 50%;
             position: absolute;
             top: 20px;
@@ -36,35 +50,22 @@
             display: flex;
             align-items: center;
         }
-        .user-profile label {
-            display: block;
-            margin-right: 10px;
-            color: #FFFFFF;
+        .user-profile img {
+            width: 40px; /* Adjust size of user image */
+            height: 40px; /* Adjust size of user image */
+            border-radius: 50%; /* Make it round */
+            position: absolute; /* Position the image absolutely */
+            left: 10px; /* Adjust left position */
         }
         .user-profile input[type="text"] {
-            padding: 15px 15px 15px 50px; /* Adjust padding for the image */
+            padding: 15px 15px 15px 55px; /* Adjust padding for image */
             border: 2px solid #F8C40D;
             border-radius: 5px;
             background-color: transparent;
             color: #FFFFFF;
             width: 160px; /* Adjust width of text input */
+            text-align: right; /* Align text to right */
             box-sizing: border-box;
-            position: relative; /* Set position relative for absolute positioning of image */
-        }
-        .user-profile .user-image {
-            position: absolute;
-            left: 10px; /* Adjust left position */
-            top: 50%; /* Center vertically */
-            transform: translateY(-50%);
-            width: 30px; /* Adjust size of image */
-            height: 30px; /* Adjust size of image */
-            border-radius: 50%;
-            overflow: hidden; /* Hide overflow for round image */
-        }
-        .user-profile .user-image img {
-            width: 100%;
-            height: auto;
-            display: block;
         }
         /* Add any additional CSS styles here */
     </style>
@@ -74,12 +75,12 @@
         <img src="your-logo.png" alt="Your Logo">
     </div>
 
+    <h1>YOUR FILES</h1>
+    <h2>Last used file</h2>
+
     <div class="user-profile">
-        
-        <div class="user-image">
-            <img src="image.png" alt= "Image">
-        </div>
         <input type="text" id="username" value="Eran Jager">
+        <img src="user-image.png" alt="User Image">
     </div>
 
     <!-- Add any additional HTML content or elements here -->
