--- a/frontend/src/fileselector.html
+++ b/frontend/src/fileselector.html
@@ -16,16 +16,25 @@
         h1 {
             position: absolute;
             top: 100px; /* Adjust top position */
-            left: 20px; /* Adjust left position */
+            left: 80px; /* Adjust left position */
             color: #FFFFFF;
             font-weight: bold;
         }
         h2 {
             position: absolute;
-            top:180px; /* Adjust top position */
-            left: 20px; /* Adjust left position */
+            top: 180px; /* Adjust top position */
+            left: 80px; /* Adjust left position */
             color: #FFFFFF;
             font-weight: bold;
+            margin-bottom: 10px; /* Add margin bottom to create space for the rectangle */
+        }
+        h2::after {
+            content: '';
+            display: block;
+            width: 420px; /* Adjust width of the rectangle */
+            height: 300px; /* Adjust height of the rectangle */
+            background-color: #D9D9D9; /* Color of the rectangle */
+            margin-top: 5px; /* Adjust distance between text and rectangle */
         }
         .logo {
             background-color: #F8C40D;
