--- a/frontend/src/fileselector.html
+++ b/frontend/src/fileselector.html
@@ -36,6 +36,13 @@
             background-color: #D9D9D9; /* Color of the rectangle */
             margin-top: 5px; /* Adjust distance between text and rectangle */
         }
+        .blank-canvas {
+            position: absolute;
+            top: 560px; /* Adjust top position */
+            left: 80px; /* Adjust left position */
+            color: #FFFFFF;
+            font-weight: bold;
+        }
         .logo {
             background-color: #F8C40D;
             width: 60px; /* Adjust width of logo */
@@ -86,6 +93,7 @@
 
     <h1>YOUR FILES</h1>
     <h2>Last used file</h2>
+    <h2 class="blank-canvas">Blank Canvas</h2>
 
     <div class="user-profile">
         <input type="text" id="username" value="Eran Jager">
