--- a/frontend/src/fileselector.html
+++ b/frontend/src/fileselector.html
@@ -108,7 +108,7 @@
 </head>
 <body>
     <div class="logo">
-        <img src="your-logo.png" alt="Your Logo">
+        <img src=".src\\logo 2.png" alt="Your Logo">
     </div>
 
     <h1>YOUR FILES</h1>
