--- a/frontend/src/fileselector.html
+++ b/frontend/src/fileselector.html
@@ -18,56 +18,12 @@
       position: relative;
     }
     h1 {
-      position: absolute;
-      top: 100px; /* Adjust top position */
-      left: 80px; /* Adjust left position */
-      color: #FFFFFF;
-      font-weight: bold;
+      font-weight: 800;
     }
     h2 {
-      position: absolute;
-      top: 180px; /* Adjust top position */
-      left: 80px; /* Adjust left position */
       color: #FFFFFF;
-      font-weight: bold;
-      margin-bottom: 10px; /* Add margin bottom to create space for the rectangle */
+      font-weight: 800;
     }
-    h2.recent-file{
-      position: absolute;
-      top: 560px; /* Adjust top position */
-      left: 1280px; /* Adjust left position */
-      color: #FFFFFF;
-      font-weight: bold;
-      
-    }
-    h2.recent-file::after {
-      content: none; /* This removes the rectangle */
-    }
-    
-    .open-file {
-      position: absolute;
-      top: 180px; /* Adjust top position */
-      left: 1280px; /* Adjust left position */
-      color: #FFFFFF;
-      font-weight: bold;
-      margin-bottom: 10px; /* Add margin bottom to create space for the rectangle */
-    }
-    h2::after {
-      content: '';
-      display: block;
-      width: 420px; /* Adjust width of the rectangle */
-      height: 300px; /* Adjust height of the rectangle */
-      background-color: #D9D9D9; /* Color of the rectangle */
-      margin-top: 5px; /* Adjust distance between text and rectangle */
-    }
-    .blank-canvas {
-      position: absolute;
-      top: 560px; /* Adjust top position */
-      left: 80px; /* Adjust left position */
-      color: #FFFFFF;
-      font-weight: bold;
-    }
-    /* Add any additional CSS styles here */
   </style>
 </head>
 <body>
@@ -90,20 +46,45 @@
   </header>
 
   <h1>YOUR FILES</h1>
-  <h2>Last used file</h2>
-  <h2 class="blank-canvas">Blank Canvas</h2>
-  <h2 class = "open-file ">Open File</h2>
-  <h2 class="recent-file">Recent Files
-    <ul>
-      <li><a href="#">Sample File 1</a></li>
-      <br>
-      <li><a href="#">Sample File 2</a></li>
-      <br>
-      <li><a href="#">Sample File 3</a></li>
-    </ul>
-  </h2>
-  
-  
+
+  <div class="container">
+    <div class="row">
+      <div class="col-6">
+        <div class="file">
+          <h2>Last used file</h2>
+          <img src="file-image.png" alt="File Image">
+          <p>File Description</p>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="file">
+          <h2>Open File</h2>
+          <img src="file-image.png" alt="File Image">
+          <p>File Description</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-6">
+        <div class="file">
+          <h2>Blank Canvas</h2>
+          <img src="file-image.png" alt="File Image">
+          <p>File Description</p>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="file-list">
+          <h2>Recent Files</h2>
+          <ul>
+            <li><a href="#">Sample File 1</a></li>
+            <li><a href="#">Sample File 2</a></li>
+            <li><a href="#">Sample File 3</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Link any JavaScript files if needed -->
   <script src="filesector.js"></script>
   
