--- a/frontend/src/fileselector.html
+++ b/frontend/src/fileselector.html
@@ -8,23 +8,8 @@
   
   <!-- bootstrap -->
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-  <style>
-    body {
-      background-color: #19222A;
-      color: #FFFFFF;
-      font-family: 'Sen', sans-serif;
-      margin: 0;
-      padding: 0;
-      position: relative;
-    }
-    h1 {
-      font-weight: 800;
-    }
-    h2 {
-      color: #FFFFFF;
-      font-weight: 800;
-    }
-  </style>
+
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
@@ -45,9 +30,9 @@
     </div>
   </header>
 
-  <h1>YOUR FILES</h1>
 
   <div class="container">
+    <h1>YOUR FILES</h1>
     <div class="row">
       <div class="col-6">
         <div class="file">
