--- a/frontend/src/fileselector.html
+++ b/frontend/src/fileselector.html
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="col-auto me-auto">
           <div>
-            <img src="./logo 2.png" alt="Your Logo">
+            <img src="assets/logo.png" alt="Your Logo">
           </div>
         </div>
         <div class="col-auto">
