add: create a container to hold the fields

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+    <div id="container">
+    </div>
+
     <script type="module" src="/src/renderer.js"></script>
 
      <!-- Add the Bootstrap JavaScript file -->
