add: add heading, label and editable field to display name

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,11 @@
   </head>
   <body>
     <div id="container">
+      <h1>My Profile</h1>
+  
+      <label for="displayName">Display Name</label>
+      <input type="text" id="displayName" value="John Doe" readonly>
+      <button id="editDisplayName">Edit</button>
     </div>
 
     <script type="module" src="/src/renderer.js"></script>
