add: add label, editable for username and an edit btn

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,10 @@
       <label for="displayName">Display Name</label>
       <input type="text" id="displayName" value="John Doe" readonly>
       <button id="editDisplayName">Edit</button>
+
+      <label for="username">Username</label>
+      <input type="text" id="username" value="johndoe" readonly>
+      <button id="editUsername">Edit</button>
     </div>
 
     <script type="module" src="/src/renderer.js"></script>
