add: add label, editable for password and edit btn

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,10 @@
       <label for="username">Username</label>
       <input type="text" id="username" value="johndoe" readonly>
       <button id="editUsername">Edit</button>
+
+      <label for="password">Password</label>
+      <input type="password" id="password" value="pass1234" readonly>
+      <button id="editPassword">Edit</button>
     </div>
 
     <script type="module" src="/src/renderer.js"></script>
