add: add buttons for home page and delete account functionality

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,6 +22,9 @@
       <label for="password">Password</label>
       <input type="password" id="password" value="pass1234" readonly>
       <button id="editPassword">Edit</button>
+
+      <button id="homeButton">Home</button>
+      <button id="deleteButton">Delete Account</button>
     </div>
 
     <script type="module" src="/src/renderer.js"></script>
