--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
   </head>
   <body>
-    <div id="container">
+    <div class="header">
       <h1>My Profile</h1>
-  
+    </div>
+    
+    <div id="container">
       <label for="displayName">Display Name</label>
       <input type="text" id="displayName" value="John Doe" readonly>
       <button id="editDisplayName">Edit</button>
