add: add button container

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,9 @@
       <label for="password">Password</label>
       <input type="password" id="password" value="pass1234" readonly>
       <button id="editPassword">Edit</button>
+    </div>
 
+    <div class="btn-container">
       <button id="homeButton">Home</button>
       <button id="deleteButton">Delete Account</button>
     </div>
