--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,28 +8,10 @@
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
   </head>
   <body>
-    <div class="header">
-      <h1>My Profile</h1>
-    </div>
-    
-    <div id="container">
-      <label for="displayName">Display Name</label>
-      <input type="text" id="displayName" value="John Doe" readonly>
-      <button id="editDisplayName">Edit</button>
+    <h1>💖 Hello World!</h1>
+    <p>Welcome to your Electron application.</p>
 
-      <label for="username">Username</label>
-      <input type="text" id="username" value="johndoe" readonly>
-      <button id="editUsername">Edit</button>
-
-      <label for="password">Password</label>
-      <input type="password" id="password" value="pass1234" readonly>
-      <button id="editPassword">Edit</button>
-    </div>
-
-    <div class="btn-container">
-      <button id="homeButton">Home</button>
-      <button id="deleteButton">Delete Account</button>
-    </div>
+    <a href="./src/settings.html">Settings</a>
 
     <script type="module" src="/src/renderer.js"></script>
 
