change: move login page

--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -14,7 +14,7 @@
     </section>
     <section class="login">
       
-        <img id="logo-img" src="src/Assets/logo.png" alt="" srcset="">
+        <img id="logo-img" src="/src/Assets/logo.png" alt="" srcset="">
         <h2 class="text-center">Login</h2>
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Username" required="required">
