--- a/frontend/src/settings.html
+++ b/frontend/src/settings.html
@@ -6,6 +6,8 @@
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="settings.css">
   </head>
   <body>
     <div class="header">
