--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -6,6 +6,7 @@
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
   <body id="login">
     <section class="login container-fluid">
@@ -20,15 +21,14 @@
 
             </div>
           </div>
-          <form action="">
+          <form id="login-form">
             <h2 class="text-center">Login</h2>
             <div class="mb-3">
-              <input type="text" class="form-control" placeholder="Username" required="required">
+              <input id="username" type="text" class="form-control" placeholder="Username" required="required">
             </div>
             <div class="mb-3">
-              <input type="text" class="form-control" placeholder="Password" required="required">
+              <input id="password" type="password" class="form-control" placeholder="Password" required="required">
             </div>
-            <a href=""></a>
             <input type="checkbox" class="form-check-input" name="remember-me" id="remember-me">
             <label class="form-check-label" for="remember-me">Remember me</label>
             <br>
@@ -40,6 +40,7 @@
     </section>
 
     <script type="module" src="/src/renderer.js"></script>
+    <script type="module" src="/src/login.js"></script>
 
      <!-- Add the Bootstrap JavaScript file -->
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
