--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,7 @@
 
     <!-- connect file sector page -->
     <a href="./src/fileselector.html"> file selector</a>
+    <a href="./src/launchconfig.html"> Launch Configuration</a>
 
     <script type="module" src="/src/renderer.js"></script>
 
