--- a/frontend/src/launchconfig.html
+++ b/frontend/src/launchconfig.html
@@ -11,6 +11,10 @@
     <div class="maincontainer">
         <div class="launchheader">
             <h1>Launch Configuration</h1>
+            <div class="profile">
+                <img src="..\src\assets\profile.jpg" alt="profile picture" id="profile">
+                <p>John Doe</p>
+            </div>
           </div>
           
           <div id="container">
