add: manual config button

--- a/frontend/src/launchconfig.html
+++ b/frontend/src/launchconfig.html
@@ -33,6 +33,7 @@
                 
                 <label for="slider4">Bottom Right:</label>
                 <input type="range" id="slider4" min="0" max="100" value="50" class="slider">
+                    <button id="myButton">Click Me</button>
             </div>
           </div>
       
