--- a/frontend/src/launchconfig.html
+++ b/frontend/src/launchconfig.html
@@ -13,7 +13,7 @@
             <h1>Launch Configuration</h1>
             <div class="profile">
                 <img src="..\src\assets\profile.jpg" alt="profile picture" id="profile">
-                <p>John Doe</p>
+                <p>Eren Jeager</p>
             </div>
           </div>
           
