Resolve conflict on index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
     <!-- connect file sector page -->
     <a href="./src/fileselector.html"> file selector</a>
     <a href="./src/launchconfig.html"> Launch Configuration</a>
-
+    <a href="/src/login.html"> login</a>
     <script type="module" src="/src/renderer.js"></script>
 
      <!-- Add the Bootstrap JavaScript file -->
