--- a/frontend/src/settings.html
+++ b/frontend/src/settings.html
@@ -6,6 +6,7 @@
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="settingsStyles.css">
   </head>
   <body>
     <div class="container">
