--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>💖 Hello World!</h1>
