--- a/frontend/src/settings.html
+++ b/frontend/src/settings.html
@@ -5,9 +5,9 @@
     <title>Settings</title>
 
     <!-- bootstrap -->
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="settingsStyles.css">
-    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="styles.css"> -->
   </head>
   <body>
     <div class="container">
