--- a/frontend/src/settings.html
+++ b/frontend/src/settings.html
@@ -15,7 +15,7 @@
         <img src="assets/logo.png" alt="Logo" class="logo">
       </div>
       <div class="right-panel">
-        <div class="header">
+        <div class="settings_header">
           <h1>My Profile</h1>
         </div>
         <div class="yellow-box"></div>
