--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,7 @@
     <a href="./src/fileselector.html"> file selector</a>
     <a href="./src/launchconfig.html"> Launch Configuration</a>
     <a href="/src/login.html"> login</a>
+    <a href="/main.html"> main</a>
 
     <script type="module" src="/src/renderer.js"></script>
 
