--- a/frontend/main.html
+++ b/frontend/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <img id="video" width="640" height="480">
+  <img id="video" width="100%" height="100%">
   <p>SECOND PAGE</p>
 </body>
 <script>
