fix electron redirects

--- a/frontend/main.html
+++ b/frontend/main.html
@@ -2,7 +2,7 @@
 <html>
 <body>
   <img id="video" width="100%" height="100%">
-  <p>SECOND PAGE</p>
+  <a href="/index.html">index</a>
 </body>
 <script>
   console.log("ELEG")
